Fix: Hide button and disable zoom on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,9 @@ input[type=file] {
   font-display: swap;
 }
 body {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
   font-family: "Lato", sans-serif;
   font-weight: 400 !important;
   font-size: 16px;
